# LLM_Scraper_Reasearch_Assistent

./: .gitignore  README.md  app.py  pyproject.toml
src/LLM_Scraper_Summary_Papers/: ArticleInfo.py  WebScrapeUtils.py  coockiesHowto  models.py
